
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






struct sockaddr_in {int dummy; } ;
struct hostent {int dummy; } ;


 scalar_t__ calloc (int,int) ;
 unsigned int inet_addr (char*) ;
 int random () ;
 int sprintf (char*,char*,int,int,int,int) ;

unsigned int randip()
{
        struct hostent *he;
        struct sockaddr_in sin;
        char *buf = (char *)calloc(1, sizeof(char) * 16);

        sprintf(buf, "%d.%d.%d.%d",
                (random()%191)+23,
                (random()%253)+1,
                (random()%253)+1,
                (random()%253)+1);

        return inet_addr(buf);

}
