; ModuleID = '/home/carl/AnghaBench/exploitdb/exploits/windows/dos/extr_24634.c_randip.c'
source_filename = "/home/carl/AnghaBench/exploitdb/exploits/windows/dos/extr_24634.c_randip.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.hostent = type { i32 }
%struct.sockaddr_in = type { i32 }

@.str = private unnamed_addr constant [12 x i8] c"%d.%d.%d.%d\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @randip() #0 {
  %1 = alloca %struct.hostent*, align 8
  %2 = alloca %struct.sockaddr_in, align 4
  %3 = alloca i8*, align 8
  %4 = call i64 @calloc(i32 1, i32 16)
  %5 = inttoptr i64 %4 to i8*
  store i8* %5, i8** %3, align 8
  %6 = load i8*, i8** %3, align 8
  %7 = call i32 (...) @random()
  %8 = srem i32 %7, 191
  %9 = add nsw i32 %8, 23
  %10 = call i32 (...) @random()
  %11 = srem i32 %10, 253
  %12 = add nsw i32 %11, 1
  %13 = call i32 (...) @random()
  %14 = srem i32 %13, 253
  %15 = add nsw i32 %14, 1
  %16 = call i32 (...) @random()
  %17 = srem i32 %16, 253
  %18 = add nsw i32 %17, 1
  %19 = call i32 @sprintf(i8* %6, i8* getelementptr inbounds ([12 x i8], [12 x i8]* @.str, i64 0, i64 0), i32 %9, i32 %12, i32 %15, i32 %18)
  %20 = load i8*, i8** %3, align 8
  %21 = call i32 @inet_addr(i8* %20)
  ret i32 %21
}

declare dso_local i64 @calloc(i32, i32) #1

declare dso_local i32 @sprintf(i8*, i8*, i32, i32, i32, i32) #1

declare dso_local i32 @random(...) #1

declare dso_local i32 @inet_addr(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
